2008-10-28  Brian Gough  <bjg@gnu.org>

	* lo-specfun.cc (zbesi): Fix scaling factor for negative alpha.
	(cbesi): Likewise.

2008-10-23  John Swensen  <jpswensen@comcast.net>

	* oct-shlib.cc (octave_dyld_shlib::open): Call NSLinkEditError to
	get better diagnostic if NSLinkModule fails.

2008-10-23  John W. Eaton  <jwe@octave.org>

	* oct-shlib.cc (octave_dlopen_shlib::open): Use RTLD_NOW instead
	of RTLD_LAZY.

2008-10-12  Jaroslav Hajek <highegg@gmail.com>

	* CSparse.cc (ComplexMatrix::expm): Improve inverse preconditioning
	according to Marco Caliari.
	* dSparse.cc (Matrix::expm): Likewise.
	* fCSparse.cc (FloatComplexMatrix::expm): Likewise.
	* fSparse.cc (FloatMatrix::expm): Likewise.

2008-10-10  Jaroslav Hajek  <highegg@gmail.com>

	* sparse-util.h (SparseCholPrint): Change char * argument to const
	char *.
	* sparse-util.cc (SparseCholPrint): Likewise.

2008-10-09  Jaroslav Hajek <highegg@gmail.com>

	* oct-sort.cc (octave_sort<T>::merge_getmem,
	octave_sort<T>::merge_freemem): Replace malloc -> new [], free ->
	delete [].
	(octave_sort<T>::merge_lo, octave_sort<T>::merge_hi): Replace
	std::memcpy and std::memmove with std::copy.

2008-10-08  John W. Eaton  <jwe@octave.org>

	* Sparse-op-defs.h (SPARSE_SMSM_BOOL_OPS): Duplicate code for scalar
	sparse arguments rather than rely on extern function.

2008-10-08  Jaroslav Hajek  <highegg@gmail.com>

	* oct-inttypes.h (octave_base_int<T>::compute_threshold): Return
	exclusive bounds rather than inclusive, be resistant to compiler
	optimizations.
	(octave_base_int<T>::convert_real): Use exclusive bounds.

2008-10-07  Jaroslav Hajek <highegg@gmail.com>

	* oct-inttypes.h (OCTAVE_INT_DOUBLE_BIN_OP): Change octave_int64 to 
	octave_uint64 where appropriate.

2008-10-06  David Bateman  <dbateman@free.fr>
	
	* Sparse-op-defs.h (SPARSE_SMSM_CMP_OPS): Duplicate code for scalar
	sparse arguments rather than rely on extern function.

2008-10-06  John W. Eaton  <jwe@octave.org>
